--- a/huly/Welcome to Huly/3.First Issue.md
+++ b/huly/Welcome to Huly/3.First Issue.md
@@ -4,20 +4,24 @@ title: Create your first issue 📝
 status: Backlog
 assignee: New User
 ---
-An **issue** represents a specific task that needs to be completed. Projects can be broken down into issues and sub-issues.
+
+An **issue** represents a specific task that needs to be completed. Projects can be broken down into issues and
+sub-issues.
 
 ### Task 3 - Create your first issue
 
 Let’s create your first issue in Huly!
 
-Click the blue `+ New Issue` button at the stop of the side panel (or simply press `C` from any view!). This will open a dialog where you can enter some initial settings for your issue. 
+Click the blue `+ New Issue` button at the top of the side panel (or simply press `C` from any view!). This will open a
+dialog where you can enter some initial settings for your issue.
 
-> **Tip:** By default, the issue will be associated with the project you’re currently viewing. You can change this to the project you just created by selecting it from the dropdown in the top left corner.
+> **Tip:** By default, the issue will be associated with the project you’re currently viewing. You can change this to
+> the project you just created by selecting it from the dropdown in the top left corner.
 
-Next, enter some information about your issue: 
+Next, enter some information about your issue:
 
-* Provide a **title** and **description**. 
-* Choose some settings, such as **priority**, **labels**, **estimation** and **due date**. 
+* Provide a **title** and **description**.
+* Choose some settings, such as **priority**, **labels**, **estimation** and **due date**.
 * The **assignee** will be the default assignee you selected for your project.
 * ❗ Ensure that the **status** is set to “Todo” — *this is important for the next step!*
 
@@ -27,8 +31,9 @@ When you’re ready, click `Create issue`!
 
 ---
 
-🎉 Congratulations! You’ve completed Task 3 ✅  
+🎉 Congratulations! You’ve completed Task 3 ✅
 
-In the next step, you’ll learn how Huly has *automatically* created an Action Item for this issue, which you’ll schedule in your personal Planner. Click the button below to continue!
+In the next step, you’ll learn how Huly has *automatically* created an Action Item for this issue, which you’ll schedule
+in your personal Planner. Click the button below to continue!
 
 ### Next: Task 4 - Schedule your first Action Item ➡️ [4.Action Item.md](./4.Action%20Item.md)
