Fix typos, update Slack link and modify content in Creating Documents
Signed-off-by: Abigail Dawson <abigaildawson.dev@gmail.com>

--- a/huly/Welcome to Huly/3.First Issue.md
+++ b/huly/Welcome to Huly/3.First Issue.md
@@ -10,7 +10,7 @@ An **issue** represents a specific task that needs to be completed. Projects can
 
 Let’s create your first issue in Huly!
 
-Click the blue `+ New Issue` button at the stop of the side panel (or simply press `C` from any view!). This will open a dialog where you can enter some initial settings for your issue. 
+Click the blue `+ New Issue` button at the top of the side panel (or simply press `C` from any view!). This will open a dialog where you can enter some initial settings for your issue. 
 
 > **Tip:** By default, the issue will be associated with the project you’re currently viewing. You can change this to the project you just created by selecting it from the dropdown in the top left corner.
 
