--- a/huly/Welcome to Huly/4.Action Item.md
+++ b/huly/Welcome to Huly/4.Action Item.md
@@ -28,7 +28,7 @@ Head over to your Planner by clicking the calendar icon in the left sidebar. Her
 There are 2 ways to schedule an Action Item:
 
 * Click and drag the Action Item to your calendar on the right, *or*
-* Click on the Action Item ****to open it in the right side panel. Click `Add Slot` to create a time slot representing when you plan to do the work. From there, you can adjust the day and time and add more slots if needed.
+* Click on the Action Item to open it in the right side panel. Click `Add Slot` to create a time slot representing when you plan to do the work. From there, you can adjust the day and time and add more slots if needed.
 
 Notice that when you schedule an Action Item, it moves from “Unplanned” to “Scheduled” on your list.
 
