--- a/huly/Welcome to Huly/5.Explore.md
+++ b/huly/Welcome to Huly/5.Explore.md
@@ -13,14 +13,14 @@ Now that you know how to create projects, issues and Action Items, you can get s
   * **Keyboard shortcuts** - Access a comprehensive list by clicking `Help & Support` in the lower left corner of the application.
   * **Mouse navigation** - Right-click on issues to open contextual menus and access commonly-used actions.
 * **Issue Peek:** Hover over issues in your Tracker and press the space bar to see a preview of the **issue’s** details. To scroll through issue previews, press `J`/`K` or move the mouse.
-* **↔️ Integrate with GitHub, Google Calendar, Gmail and more!** 
+* **↔️ Integrate with GitHub and Google Calendar** to keep everything in one place! 
 
 ---
 
 ### Need some more support?
 
 * [**Huly Docs**](https://docs.huly.io/) - Our resource for step-by-step tutorials! Learn how to customize the Huly platform to your team’s needs through detailed instructions.
-* [**Slack**](https://hulycommunity.slack.com/join/shared_invite/zt-29kl7zmwz-2b3RRVTiWhhtAwzHjBm3Wg#/shared-invite/email) - Join our community on Slack to share feedback and feature suggestions!
+* [**Slack**](https://huly.link/slack) - Join our community on Slack to share feedback and feature suggestions!
 * [**YouTube**](https://www.youtube.com/@huly_io) - Dive deeper into Huly’s features by watching our demo videos, tutorials and other video content.
 * Reach out through **[LinkedIn](https://www.linkedin.com/company/hulylabs/)** and [**Twitter**](https://twitter.com/huly_io) - we’d love to see what you’re building with Huly!
 
