init content for issues and cards
Signed-off-by: Abigail Dawson <abigaildawson.dev@gmail.com>

--- a/huly/Welcome to Huly/5.Explore.md
+++ b/huly/Welcome to Huly/5.Explore.md
@@ -1,31 +1,25 @@
 ---
 class: tracker:class:Issue
-title: Explore all Huly has to offer 🚀
+title: Explore Cards 🗂️
 status: Backlog
 assignee: New User
 ---
-Now that you know how to create projects, issues and Action Items, you can get started setting up your workspace. However, there’s so much more to the Huly platform than just task tracking! Dive deeper into the world of Huly, where harnessing the power of collaborative project management is just the beginning. Discover the ease and efficiency of managing your projects with us!
 
-### Additional Features
+**Cards** are a flexible framework for structuring information efficiently. You can use Cards to create an efficient knowledge management system. 
 
-* ➡️ Navigate Huly using these 3 intuitive methods: 
-  * **Command line** (`Cmd`/`Ctrl` + `K`) - Quickly search for items or execute commands.
-  * **Keyboard shortcuts** - Access a comprehensive list by clicking `Help & Support` in the lower left corner of the application.
-  * **Mouse navigation** - Right-click on issues to open contextual menus and access commonly-used actions.
-* **Issue Peek:** Hover over issues in your Tracker and press the space bar to see a preview of the **issue’s** details. To scroll through issue previews, press `J`/`K` or move the mouse.
-* **↔️ Integrate with GitHub and Google Calendar** to keep everything in one place! 
+You may have already explored some of the Cards linked to the issues we just looked at. From here, feel free to leave the Tracker and head over to Cards. You can find the Cards module in the left side navigation, or dive right in:  !! NEEDS LINK: Main Story Arc
 
 ---
 
 ### Need some more support?
 
-* [**Huly Docs**](https://docs.huly.io/) - Our resource for step-by-step tutorials! Learn how to customize the Huly platform to your team’s needs through detailed instructions.
-* [**Slack**](https://huly.link/slack) - Join our community on Slack to share feedback and feature suggestions!
-* [**YouTube**](https://www.youtube.com/@huly_io) - Dive deeper into Huly’s features by watching our demo videos, tutorials and other video content.
-* Reach out through **[LinkedIn](https://www.linkedin.com/company/hulylabs/)** and [**Twitter**](https://twitter.com/huly_io) - we’d love to see what you’re building with Huly!
+* [Huly Docs](https://docs.huly.io/) - Our resource for step-by-step tutorials! Learn how to customize the Huly platform to your team’s needs through detailed instructions and video demonstrations.
+* [Slack](https://huly.link/slack) - Our community on Slack is not only an excellent resource for getting in touch directly with our engineers for support, but also a great space for sharing feedback and feature suggestions!
+* [YouTube](https://www.youtube.com/@huly_io) - Dive deeper into Huly’s features by watching our demo videos, tutorials and other video content.
+* Reach out through [LinkedIn](https://www.linkedin.com/company/hardcoreeng/) and [Twitter](https://x.com/huly_io) - we’d love to see what you’re building with Huly!
 
 ---
 
 🎉 Congratulations! You’ve completed all of the tasks! ✅ 
 
-We can’t wait to see what you create! 🚀
+Now that you know the basic functions of the Huly Platform, you’re ready to get your workspace set up just the way you like. Feel free to delete our starter examples, or use them as inspiration as you build your own systems. Huly has so much more to offer than what we’ve covered in this short tutorial — from video conferencing to chat, documents and more. Have fun exploring!
