Fix small issues
Signed-off-by: Abigail Dawson <abigaildawson.dev@gmail.com>

--- a/huly/Welcome to Huly/1.Welcome.md
+++ b/huly/Welcome to Huly/1.Welcome.md
@@ -11,7 +11,7 @@ Embark on an exciting journey to learn the essential tools available to you on t
 As you explore your workspace, you’ll find **game characters**, **narrative documents** and **game assets**. We’ll get you started with a basic game design system that you can expand upon yourself — or simply use as a reference for how you can collaborate with your team on Huly!
 
 Here’s a sneak peek 👀
-![](../files/cards.png)
+<img src="../files/cards.png" width="800"/>
 
 Let’s get started! You’ll complete 5 tasks to learn about the essential features of the Huly platform:
 
