--- a/huly/Welcome to Huly/3.Issue.md
+++ b/huly/Welcome to Huly/3.Issue.md
@@ -20,7 +20,7 @@ Now it’s time to assign yourself an issue in your `GAME DESIGN` project! Follo
 3. In the right side panel, open `Assignee` and select **yourself**.
 4. Set the issue `Status` to **Todo**. ❗_This is important for the next step!_
 
-![](../files/assign-issue.png)
+<img src="../files/assign-issue.png" width="800"/>
 
 **_Creating a new issue (optional alternative)_**
 
@@ -32,7 +32,7 @@ Instead of assigning an existing issue to yourself, you can also create a new is
 4. Set the `Status` to **Todo**. ❗_This is important for the next step!_
 5. Click `Create issue`.
 
-![](../files/new-issue.png)
+<img src="../files/new-issue.png" width="800"/>
 
 ---
 
