--- a/huly/Welcome to Huly/4.ActionItem.md
+++ b/huly/Welcome to Huly/4.ActionItem.md
@@ -21,7 +21,7 @@ When an **issue** is created with the status of “Todo” and assigned to a tea
 
 Because you set the issue status to “Todo” and assigned it to yourself in the previous step, you’ve received a corresponding Action Item for that issue. Head over to your **Planner** by clicking the calendar icon in the left sidebar. There, you’ll see an Action Item for the issue you just assigned!
 
-![](../files/action-item.png)
+<img src="../files/action-item.png" width="800"/>
 
 There are 2 ways to schedule an Action Item:
 * Click and drag the Action Item to your calendar on the right side panel, _or_
@@ -29,7 +29,7 @@ There are 2 ways to schedule an Action Item:
 
 Notice that when you schedule an Action Item, it moves from “Unplanned” to “Scheduled” on the list:
 
-![](../files/schedule-action-item.png)
+<img src="../files/schedule-action-item.png" width="800"/>
 
 Now, navigate back to the **issue**. Notice that the status automatically updated to “In Progress”! That’s because you scheduled your Action Item, indicating your commitment to completing the work.
 
