--- a/huly/Welcome to Huly/5.Explore.md
+++ b/huly/Welcome to Huly/5.Explore.md
@@ -7,7 +7,7 @@ assignee: New User
 
 **Cards** are a flexible framework for structuring information efficiently. You can use Cards to create an efficient knowledge management system. 
 
-You may have already explored some of the Cards linked to the issues we just looked at. From here, feel free to leave the Tracker and head over to Cards. You can find the Cards module in the left side navigation, or dive right in:  !! NEEDS LINK: Main Story Arc
+You may have already explored some of the Cards linked to the issues we just looked at. From here, feel free to leave the Tracker and head over to Cards. You can find the Cards module in the left side navigation, or dive right in: [Main Story Arc](../card:types:Document/Game%20Narrative/The%20Hero's%20Journey.md)
 
 ---
 
