--- a/huly/Welcome to Huly/2.Project.md
+++ b/huly/Welcome to Huly/2.Project.md
@@ -14,12 +14,12 @@ assignee: New User
 **_Edit project details:_**
 * Hover over the `GAME DESIGN` project in the left side panel. Click the `…` settings menu and select `Edit project` from the menu. Here, you can edit the title, description, default assignee, and set privacy details.
 
-![](../files/edit-project)
+<img src="../files/edit-project.png" width="800"/>
 
 View issues:
 * Click `Issues` to see all issues (tasks) in this project. Click to open any issue, or hover over the issue and press `Space` on your keyboard to open an issue peek! With issue peek open, you can preview the issues by pressing the up and down arrows on your keyboard, or press `Space` to close.
 
-![](../files/issue-peek)
+<img src="../files/issue-peek.png" width="800"/>
 
 Explore Cards:
 * Note that each issue lists some related **Cards**. Feel free to check these out now — just be sure to come back here to complete the next task!
