More small fixes for links and images
Signed-off-by: Abigail Dawson <abigaildawson.dev@gmail.com>

--- a/huly/Game Design/1.Game-1.md
+++ b/huly/Game Design/1.Game-1.md
@@ -10,5 +10,5 @@ The narrative should hint at both internal and external conflicts and create opp
 
 See the following Cards:
 
-* !! Need Link: The Hero
-* !! Need Link: Main Story Arc
+* [The Hero](../Game%20Component/Character/Player/The%20Hero.md)
+* [Main Story Arc](../card:types:Document/Game%20Narrative/The%20Hero's%20Journey.md)
