--- a/huly/Game Design/2.Game-2.md
+++ b/huly/Game Design/2.Game-2.md
@@ -12,5 +12,5 @@ This outline will guide the development of dialogue, cutscenes, quests, and worl
 
 See the following Cards:
 
-* !! Need Link: Legend of the Celestial Swords
-* !! Need Link: Main Story Arc
+* [Legend of the Celestial Swords](../card:types:Document/Game%20Narrative/The%20Legend%20of%20the%20Celestial%20Swords.md)
+* [Main Story Arc](../card:types:Document/Game%20Narrative/The%20Hero's%20Journey.md)
