--- a/huly/Game Design/3.Game-3.md
+++ b/huly/Game Design/3.Game-3.md
@@ -12,6 +12,6 @@ The weapon should feel iconic and memorable, serving both as a gameplay tool and
 
 See the following Cards:
 
-* !! Need Link: Sword concepts
-* !! Need Link: Bow weapon
-* !! Need Link: Sword weapon
+* [Sword concepts](../card:types:File/Game%20Asset/Image%20Asset/Sword%20concepts.md)
+* [Bow weapon](../Game%20Component/Item/Sword%20weapon.md)
+* [Sword weapon](../Game%20Component/Item/Sword%20weapon.md)
