--- a/huly/Game Design/4.Game-4.md
+++ b/huly/Game Design/4.Game-4.md
@@ -12,6 +12,6 @@ Provide detailed feedback for revisions or approve it if it meets the desired qu
 
 See the following Cards:
 
-* !! Need Link: Sword Sound Effect
-* !! Need Link: Bow weapon
-* !! Need Link: Sword concepts
+* [Sword Sound Effect](../card:types:File/Game%20Asset/Audio%20Asset/Sword%20Sound%20Effect.md)
+* [Bow weapon](../Game%20Component/Item/Sword%20weapon.md)
+* [Sword concepts](../card:types:File/Game%20Asset/Image%20Asset/Sword%20concepts.md)
