--- a/huly/Welcome to Huly/3.Issue.md
+++ b/huly/Welcome to Huly/3.Issue.md
@@ -18,7 +18,7 @@ Now it’s time to assign yourself an issue in your `GAME DESIGN` project! Follo
 1. First, navigate back to the `GAME DESIGN` project in the left side panel and select `Issues`.
 2. Click to open any issue that interests you.
 3. In the right side panel, open `Assignee` and select **yourself**.
-4. Set the issue `Status` to **Todo**. ❗_This is important for the next step!_
+4. Set the issue `Status` to **Todo**. ❗This is important for the next step!
 
 <img src="../files/assign-issue.png" width="800"/>
 
@@ -29,7 +29,7 @@ Instead of assigning an existing issue to yourself, you can also create a new is
 1. Click the blue `+ New Issue` button at the top of the side panel (or press `C` from any view).
 2. Enter some information about your issue, such as a title and description.
 3. Set the `Assignee` to **yourself**. 
-4. Set the `Status` to **Todo**. ❗_This is important for the next step!_
+4. Set the `Status` to **Todo**. ❗This is important for the next step!
 5. Click `Create issue`.
 
 <img src="../files/new-issue.png" width="800"/>
