Include cards examples and update content (#9)
* init content for issues and cards

Signed-off-by: Abigail Dawson <abigaildawson.dev@gmail.com>

* Add relations, references and enums

Signed-off-by: Abigail Dawson <abigaildawson.dev@gmail.com>

* Replace images

Signed-off-by: Abigail Dawson <abigaildawson.dev@gmail.com>

* Fix inheritance from system types, minor fixes

Signed-off-by: Anna Khismatullina <anna.khismatullina@gmail.com>

* Update quick start docs content

Signed-off-by: Abigail Dawson <abigaildawson.dev@gmail.com>

* Fix small issues

Signed-off-by: Abigail Dawson <abigaildawson.dev@gmail.com>

* More small fixes for links and images

Signed-off-by: Abigail Dawson <abigaildawson.dev@gmail.com>

* Fixes for labels and relations

Signed-off-by: Abigail Dawson <abigaildawson.dev@gmail.com>

* Fix link

Signed-off-by: Abigail Dawson <abigaildawson.dev@gmail.com>

* Minor fix in attribute name

Signed-off-by: Anna Khismatullina <anna.khismatullina@gmail.com>

---------

Signed-off-by: Abigail Dawson <abigaildawson.dev@gmail.com>
Signed-off-by: Anna Khismatullina <anna.khismatullina@gmail.com>
Co-authored-by: Abigail Dawson <abigaildawson.dev@gmail.com>

--- a/huly/Welcome to Huly/1.Welcome.md
+++ b/huly/Welcome to Huly/1.Welcome.md
@@ -6,18 +6,29 @@ assignee: New User
 ---
 ### **Welcome to Huly, your all-in-one project management platform!** 
 
-Embark on an exciting journey to master our next-generation project management tool. Packed with features like collaborative editing, team scheduling, video conferencing and more, the Huly platform is totally customizable to your team’s unique needs.
+Embark on an exciting journey to learn the essential tools available to you on the Huly Platform! Huly includes powerful features for collaborative editing, knowledge management, video conferencing and more.
 
-Let’s get started by setting up your team workspace! You’ll complete **5 tasks** to learn about the essential features of the Huly platform:
+As you explore your workspace, you’ll find **game characters**, **narrative documents** and **game assets**. We’ll get you started with a basic game design system that you can expand upon yourself — or simply use as a reference for how you can collaborate with your team on Huly!
+
+Here’s a sneak peek 👀
+<img src="../files/cards.png" width="800"/>
+
+Let’s get started! You’ll complete 5 tasks to learn about the essential features of the Huly platform:
 
 1. Welcome to Huly! 🌟 (you are here!)
-2. Create your first **project** 📌
-3. Create your first **issue** 📝
-4. Schedule your first **Action Item** 📆
-5. Explore all Huly has to offer 🚀
+2. Create your first Project 📌
+3. Create your first Issue 📝
+4. Schedule your first Action Item 📆
+5. Explore Cards 🗂️
 
-Once you're familiar with Huly, feel free to delete these starter tasks or share them with your team!
+Once you're familiar with Huly, feel free to delete these starter tasks or keep them as reference.
 
-🎉Congratulations! You’ve completed Task 1 just by getting started ✅ Click below to proceed to Task 2!
+---
 
-### Next: Task 2 - Create your first project ➡️ [2.First Project.md](./2.First%20Project.md)
+🎉 Congratulations! You’ve completed Task 1 just by getting started ✅ Click below to proceed to Task 2!
+
+### Next: Task 2 - Check out your first Project 📌
+
+We’ve created an example Project called `GAME DESIGN` to help you learn how projects work in Huly. In the next step, you’ll learn how to open a project and view issues (tasks). Let’s go! 🚀
+
+### ➡️ [2.Project.md](./2.Project.md)
