Support variables in import files
Signed-off-by: Anna Khismatullina <anna.khismatullina@gmail.com>

--- a/huly/Game Design/1.Game-1.md
+++ b/huly/Game Design/1.Game-1.md
@@ -2,7 +2,7 @@
 class: tracker:class:Issue
 title: Write backstory for main character
 status: Backlog
-assignee: New User
+assignee: ${creatorName@global}
 ---
 Develop a rich and compelling backstory for the main character that captures their personal history, core motivations, and emotional arc. Consider where they come from, what pivotal experiences shaped them, and why they’re involved in the events of the game. 
 
