--- a/huly/Game Design/2.Game-2.md
+++ b/huly/Game Design/2.Game-2.md
@@ -2,7 +2,7 @@
 class: tracker:class:Issue
 title: Outline key story beats for main narrative
 status: Backlog
-assignee: New User
+assignee: ${creatorName@global}
 ---
 Map out the overarching structure of the game’s narrative by identifying the key story beats that define the player’s journey. These should include major turning points such as the opening hook, inciting incident, rising tension, climax, and resolution. 
 
