--- a/huly/Game Design/3.Game-3.md
+++ b/huly/Game Design/3.Game-3.md
@@ -2,7 +2,7 @@
 class: tracker:class:Issue
 title: Design signature weapon for main character
 status: Backlog
-assignee: New User
+assignee: ${creatorName@global}
 ---
 Conceptualize a unique signature weapon for the main character that reflects their personality, backstory, and combat style. 
 
