--- a/huly/Game Design/4.Game-4.md
+++ b/huly/Game Design/4.Game-4.md
@@ -2,7 +2,7 @@
 class: tracker:class:Issue
 title: Review sword sound effect
 status: Backlog
-assignee: New User
+assignee: ${creatorName@global}
 ---
 Listen to and evaluate the current sound effect assigned to sword swings and hits. 
 
