--- a/huly/Welcome to Huly/1.Welcome.md
+++ b/huly/Welcome to Huly/1.Welcome.md
@@ -2,7 +2,7 @@
 class: tracker:class:Issue
 title: Welcome to Huly! 🌟
 status: Todo
-assignee: New User
+assignee: ${creatorName@global}
 ---
 ### **Welcome to Huly, your all-in-one project management platform!** 
 
