--- a/huly/Welcome to Huly/2.Project.md
+++ b/huly/Welcome to Huly/2.Project.md
@@ -2,7 +2,7 @@
 class: tracker:class:Issue
 title: Check out your first project 📌
 status: Backlog
-assignee: New User
+assignee: ${creatorName@global}
 ---
 
 **Projects** contain all the tasks your team will be working on. We’ve set you up with an example project called `GAME DESIGN`.
