--- a/huly/Welcome to Huly/3.Issue.md
+++ b/huly/Welcome to Huly/3.Issue.md
@@ -2,7 +2,7 @@
 class: tracker:class:Issue
 title: Assign yourself an issue 📝
 status: Backlog
-assignee: New User
+assignee: ${creatorName@global}
 ---
 
 An **issue** represents a specific task that needs to be completed. Projects can contain many issues and sub-issues.
