--- a/huly/Welcome to Huly/4.ActionItem.md
+++ b/huly/Welcome to Huly/4.ActionItem.md
@@ -2,7 +2,7 @@
 class: tracker:class:Issue
 title: Schedule your first Action Item 📆
 status: Backlog
-assignee: New User
+assignee: ${creatorName@global}
 ---
 
 An **Action Item** is a task to be completed by a specific team member. 
