--- a/huly/Welcome to Huly/5.Explore.md
+++ b/huly/Welcome to Huly/5.Explore.md
@@ -2,7 +2,7 @@
 class: tracker:class:Issue
 title: Explore Cards 🗂️
 status: Backlog
-assignee: New User
+assignee: ${creatorName@global}
 ---
 
 **Cards** are a flexible framework for structuring information efficiently. You can use Cards to create an efficient knowledge management system. 
