Port of tracex-init to v0.7
Signed-off-by: Victor Ilyushchenko <alt13ri@gmail.com>

--- a/tracex_v07/issue-onboarding/1.step-1-welcome.md
+++ b/tracex_v07/issue-onboarding/1.step-1-welcome.md
@@ -2,7 +2,7 @@
 class: tracker:class:Issue
 title: Welcome to TraceX! 🌟
 status: Todo
-assignee: New User
+assignee: ${creatorName@global}
 ---
 ### **Welcome to TraceX, the all-in-one platform that simplifies compliance and powers your productivity!** 
 
