--- a/tracex_v07/issue-onboarding/2.step-2-create-controlled-document.md
+++ b/tracex_v07/issue-onboarding/2.step-2-create-controlled-document.md
@@ -2,7 +2,7 @@
 class: tracker:class:Issue
 title: 📄 Step 2 – Create your first controlled document
 status: Todo
-assignee: New User
+assignee: ${creatorName@global}
 ---
 Quality documents are a core part of the **Controlled Documents** module. They’re used to manage compliance content such as **Standard Operating Procedures (SOPs)** and **Work Instructions (WIs)**.
 
