--- a/tracex_v07/issue-onboarding/3. step-3-edit-draft.md
+++ b/tracex_v07/issue-onboarding/3. step-3-edit-draft.md
@@ -2,7 +2,7 @@
 class: tracker:class:Issue
 title: Step 3 – Edit and manage your draft document ✍️
 status: Todo
-assignee: New User
+assignee: ${creatorName@global}
 ---
 
 Now that your draft is created, you can start editing your document. All controlled documents, whether SOPs, WIs, or other types, offer the same powerful editing features.
