--- a/tracex_v07/issue-onboarding/4.step-4-review-approval.md
+++ b/tracex_v07/issue-onboarding/4.step-4-review-approval.md
@@ -2,7 +2,7 @@
 class: tracker:class:Issue
 title: Step 4 – Review and approve your document ✅ 
 status: Todo
-assignee: New User
+assignee: ${creatorName@global}
 ---
 
 TraceX includes electronic signatures that comply with **all regulatory requirements**, including **21 CFR Part 11 (FDA)**. These signatures ensure every step of the review and approval process is fully traceable and audit-ready.
