--- a/tracex_v07/issue-onboarding/5.step-5-create-template.md
+++ b/tracex_v07/issue-onboarding/5.step-5-create-template.md
@@ -2,7 +2,7 @@
 class: tracker:class:Issue
 title: Step 5 – Create and use custom templates 🧩
 status: Todo
-assignee: New User
+assignee: ${creatorName@global}
 ---
 
 Templates in TraceX allow you to standardize controlled documents so your team can quickly create new records that follow the same structure and compliance format. 
