--- a/tracex_v07/issue-onboarding/6.step-6-explore-tracex.md
+++ b/tracex_v07/issue-onboarding/6.step-6-explore-tracex.md
@@ -2,7 +2,7 @@
 class: tracker:class:Issue
 title: Step 6 – Explore everything TraceX has to offer 🚀
 status: Todo
-assignee: New User
+assignee: ${creatorName@global}
 ---
 
 By now, you’ve learned how to create and manage controlled documents in TraceX.  
